2007-08-03 Ingo Renner	<typo3@ingo-renner.com>

	* added initial version of IRRE support and vaious other smaller code clean ups from T3DD07, thanks to Peter and Olly!

2007-07-18 Peter Foerger	<p.foerger@vke-design.de>

	* FIX fixed bug 4991: table definition for TEXT and BLOB not compliant with MySQL 5.0 strict mode
	* Thanks to Steffen Mueller for applying the initial patch

2007-07-12 Peter Foerger	<p.foerger@vke-design.de>

	* FIX fixed bug 5458: Kickstarter reports the wrong path after adding back-end functionality.
	
2007-07-12 Peter Foerger	<p.foerger@vke-design.de>

	* FIX fixed bug 5525: Reserved fieldnames @ extending a table

2007-06-04 Ingo Renner	<typo3@ingo-renner.com>

	* FIX fixed bug 5733: Code generated for localization contains simple quoting bug

2007-03-15 Ingo Renner <typo3@ingo-renner.com>

	* CHG changed some text in the language section

2007-03-06 Ingo Renner <typo3@ingo-renner.com>

	* Lots of thanks to Peter Foerger for the help with this update
	* RMV 0002491: Remove commented-out code from the kickstarter, thanks to Oliver Klee 
	* ADD 0004539: Manage flex fields, thanks to Jean-Baptiste Rio
	* UPD 0003723: ['feInterface'] section is depricated
	* ADD 0004850: sidemenu()::singles should be configurable

2007-02-22 Ingo Renner <typo3@ingo-renner.com>

	* CHG more single quotes
	* ADD added TODO file
	
2007-01-30 Ingo Renner <typo3@ingo-renner.com>

	* FIX path for TS files is now lowercased

2007-01-24 Peter Foerger <p.foerger@vke-design.de>

	* ADD new feature: initial release of the IRRE integration
	
2006-12-19 Peter Foerger <p.foerger@vke-design.de>

	* FIX fixed bug 0004563: kickstarter uses .php instead of .xml lang files

2006-12-05 Ingo Renner <typo3@ingo-renner.com>

	* thanks a lot to Peter Foerger for a lot of work contributed to these fixes

	* FIX fixed bug 0004258: TS setup title allows spaces
	* FIX fixed bug 0002176: Kickstarter should check for mysql reserved words.